--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "morgan": "~1.9.0",
     "pg-promise": "^7.3.1",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.5"
   }
 }
