--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "psql -f ../db/messages_board.sql && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "selenium-setup": "selenium-standalone install",
     "selenium-start": "selenium-standalone start",
-    "e2e-tests": "wdio wdio.conf.js",
+    "e2e-tests": "psql -f ../db/create_fresh_db.sql && wdio wdio.conf.js",
     "e2e-tests-watch": "wdio wdio.conf.js --watch"
   },
   "proxy": "http://localhost:3001",
